# MultilevelMCMCExaHyPE

./: .gitignore  CMakeLists.txt  FullParallelMLMCMC.cpp  MCMC_LOH1.cpp  MLMCMC.cpp  ModelTest.cpp  MultilevelExahype.cpp  Plot.ipynb  README.md  SLMCMC.cpp  SWE_MC_ADERDG.exahype2  SWE_MC_ADERDG_ML.exahype2  SWE_MC_ADERDG_l.exahype2  SWE_asagi_limited.exahype2  calculateLikelihood.hh  download_muq_dependencies.sh  exahype.log-filter  jobscript.slm  jobscript_ModelTest.slm  jobscript_SLMCMC.slm  jobscript_fp.slm  jobscript_ml.slm  jobscript_sl.slm  problem.h  readCsv.cpp  readCsv.h  supermuc_enviroment.txt
Output/Reference/: waveheight1-rank-0.probe  waveheight10-rank-0.probe  waveheight11-rank-0.probe  waveheight12-rank-0.probe  waveheight13-rank-0.probe  waveheight14-rank-0.probe  waveheight15-rank-0.probe  waveheight16-rank-0.probe  waveheight2-rank-0.probe  waveheight3-rank-0.probe  waveheight4-rank-0.probe  waveheight5-rank-0.probe  waveheight6-rank-0.probe  waveheight7-rank-0.probe  waveheight8-rank-0.probe  waveheight9-rank-0.probe
Output/Reference/vtk-output/: conserved-0-rank-0.vtk  conserved-1-rank-0.vtk  conserved-10-rank-0.vtk  conserved-2-rank-0.vtk  conserved-3-rank-0.vtk  conserved-4-rank-0.vtk  conserved-5-rank-0.vtk  conserved-6-rank-0.vtk  conserved-7-rank-0.vtk  conserved-8-rank-0.vtk  conserved-9-rank-0.vtk
Output/TFMisfit/: TFMisfit.py  timeFrequencyMisfit_2.py
SWE_MC_ADERDG/: AbstractMySWESolver_ADERDG.cpp  AbstractMySWESolver_ADERDG.h  AbstractMySWESolver_FV.cpp  AbstractMySWESolver_FV.h  ConservedWriter.cpp  KernelCalls.cpp  Makefile  MySWESolver_ADERDG.cpp  MySWESolver_ADERDG.h  MySWESolver_ADERDG_Variables.h  MySWESolver_FV.h  MySWESolver_FV_Variables.h  buildinfo.h  cfiles.mk  exahype_link  export.sh  initandsoon.cpp  initandsoon.h  initandsoon_extern.h  readCsv.cpp
SWE_asagi_limited/: ConservedWriter.cpp  ConservedWriter_p3.cpp  ConservedWriter_p3.h  InitialData.cpp  InitialData.h  MySWESolver_ADERDG.cpp  MySWESolver_ADERDG.h  MySWESolver_FV.cpp  MySWESolver_p2_ADERDG.cpp  MySWESolver_p2_ADERDG.h  MySWESolver_p2_FV.cpp  MySWESolver_p2_FV.h  MySWESolver_p3_ADERDG.cpp  MySWESolver_p3_ADERDG.h  MySWESolver_p3_FV.cpp  MySWESolver_p3_FV.h  ProbeWriter.h  ProbeWriter18.cpp  ProbeWriter19.cpp  ProbeWriter_p2.cpp  ProbeWriter_p3.cpp  buoy-rank-0.probe  initandsoon.cpp  initandsoon.h  initandsoon_extern.h  initialiseMUQ.cpp  muq_globals.h  reader
build_loh1/: jobscript.slm
